2022-03-08  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk (LEB128.value): Really allow up to 64-bit
	integers and fix calculation of the return value.
	(ULEB128.value): Likewise.
	Reported and fixed by bjorn3 in the IRC channel.

2022-03-07  Daiki Ueno  <ueno@gnu.org>

	* pickles/asn1-ber.pk (BER_Identifier): Fix long-form tag number
	handling.
	(BER_Length): Fix long-form definite length calculation.

2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen-attrs.pks (attr_ios): Add explicative message in
	raised exception.
	(attr_size): Likewise.
	(attr_offset): Likewise.

2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/array-type-diag-2.pk: New test.

	* libpoke/pkl-anal.c (pkl_anal1_ps_type_array): New handler.
	(pkl_phase_anal1): Install handler.

2022-02-26  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk: s/initially/currently command help string.

2022-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Fix precedence of EXCOND.

2022-02-18  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf-64.pk: Fix IOS in in-method mappings.

2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk (dump): Fix start of ASCII dump when :from is
	used.
	* testsuite/poke.cmd/dump-13.pk (pk_dump_ascii): New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_mem): Create uniquely named memory IOS
	if no name is specified in .mem.

2022-02-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (print_help): Do not use pk-term.
	(pk_print_version): Likewise.
	(parse_args_2): Likewise.
	(pk_fatal): Likewise.
	(parse_args_1): Handle HELP_ARG and VERSION_ARG here.
	(parse_args_2): ... instead of here.

2022-02-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-save.pk: Do not capitalize summary in help entry.
	* poke/pk-extract.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-scrabble.pk: Likewise.
